tests/expectations/compiler/structs/cyclic_structs_four_fail.out
Error [EPAR0370005]: expected ';' -- found ','
    --> compiler-test:9:14
     |
   9 |     baz: [Baz, 2],
     |              ^
